# rvnpl

./: Dockerfile  LICENSE  README  README.md  setup.cfg  setup.py
cppextend/: __init__.py  cconv2.cpp  ibd_m.cpp  ibd_m_rv.cpp  missing_infer.cpp  missingparents.cpp  postInv.cpp  sall_rv_complete.cpp
cstatgen/: setup.py
cstatgen/src/: Exception.hpp  HaplotypingEngine.hpp  HaplotypingEngine.hpp~  HaplotypingUtils.cpp  HaplotypingUtils.cpp~  HaplotypingUtils.hpp  HaplotypingUtils.hpp~  VCFstream.hpp  __init__.py  cstatgen.i  cstatgen_py2.cxx  cstatgen_py2.py
cstatgen/src/egglib/: AUTHORS  PKG-INFO  README  __init__.py  apps.conf  apps.conf.in  data.py  egglib_binding.cpp  egglib_binding.h  egglib_binding.py  fitmodel.py  simul.py  tools.py  utils.py  wrappers.py
cstatgen/src/egglib/egglib-cpp/: ABC.cpp  ABC.hpp  Align.cpp  Align.hpp  Arg.cpp  Arg.hpp  BaseDiversity.cpp  BaseDiversity.hpp  BppDiversity.cpp  BppDiversity.hpp  ChangeLog  ChangeTypes.cpp  ChangeTypes.hpp  CharMatrix.hpp  Consensus.cpp  Consensus.hpp  Container.cpp  Container.hpp  Controller.cpp  Controller.hpp  Convert.cpp  Convert.hpp  Current.cpp  Current.hpp  DataMatrix.cpp  DataMatrix.hpp  Edge.cpp  Edge.hpp  EggException.cpp  EggException.hpp  FStatistics.cpp  FStatistics.hpp  Fasta.cpp  Fasta.hpp  HFStatistics.cpp  HFStatistics.hpp  HaplotypeDiversity.cpp  HaplotypeDiversity.hpp  INSTALL  LinkageDisequilibrium.cpp  (+29 more)
cstatgen/src/egglib/test/: __init__.py  example_files.py  t_data.py  t_egglib_binding.py  t_fitmodel.py  t_simul.py  t_tools.py  t_utils.py  t_wrappers.py
cstatgen/src/umich/: MerlinPatches.diff  README  Usage.notes
cstatgen/src/umich/clusters/: HaploTree.cpp  HaploTree.cpp~  SparseLikelihood.cpp  SparseLikelihood.cpp~
cstatgen/src/umich/general/: Pedigree.cpp  Pedigree.cpp~  PedigreeAlleleFreq.cpp~  PedigreeGlobals.cpp  PedigreeGlobals.cpp~
cstatgen/src/umich/merlin/: MerlinCluster.cpp  MerlinCluster.cpp~  MerlinCluster.h  MerlinFamily.cpp  MerlinFamily.h  MerlinHaplotype.cpp  MerlinHaplotype.h
cstatgen/src/umich/vcf/: VcfRecordDiscardRules.h
cstatgen/test/Haplotyping/: 11.txt  12.txt  21.txt  22.txt  Makefile  demo.cpp  test.sh
cstatgen/test/VCFstream/: Makefile  demo.cpp
example/: 100extend_01.ped  100extend_quant.ped  A1BG.txt
example/A1BG/: rep1.vcf.gz.tbi
seqlink/: Core.py  Runner.py
src/: __init__.py  family_class.py  family_class_combined.py  ibd_module.py  npl.py  npl_all_combined_v08_test2_tmp7_tmp4_large7_s4_tmp4_fast5_cache.py  npl_class.py  qnpl_class.py  qtl.py  rvnpl  screen_output.py  utils.py
test/: README.md  test_family.py
